--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "express": "^4.16.2",
     "geojson": "^0.5.0",
     "humps": "^2.0.1",
+    "leaflet": "^1.3.1",
     "mongoose": "^5.0.1",
-    "node-fetch": "^1.7.3"
+    "node-fetch": "^1.7.3",
+    "react-leaflet": "^1.8.0"
   },
   "devDependencies": {
     "dotenv": "^4.0.0",
